Got rid of most warnings, other than depreciated url